--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect ./src/index.js"
+    "start": "nodemon --inspect=9999 ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-errors": "^2.0.0",
     "joi": "^17.13.3",
-    "mongoose": "^8.9.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.4",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
